--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,26 @@
-# Core packages
-qiskit>=2.0.0
-qiskit-aer>=0.11.0
+# Core packages for IBM Quantum connection
+qiskit[visualization]>=1.0.0
 qiskit-ibm-provider>=0.5.0
-qiskit-ibm-runtime>=0.41.0
+qiskit-ibm-runtime>=0.20.0
+qiskit-aer>=0.12.0
+
+# Web framework
 Flask>=2.0.0
 requests>=2.25.0
+
+# Scientific computing
 numpy>=1.20.0
 matplotlib>=3.4.0
+scipy>=1.7.0
+pandas>=1.2.0
 
-# Visualization
-pylatexenc>=2.10
+# Advanced visualization
+plotly>=5.0.0
+seaborn>=0.9.0
+bokeh>=2.0.0
 
-# Configuration
+# Configuration and environment
 python-dotenv>=1.0.0
+
+# Additional quantum packages
+pydot>=4.0.0
